# project2_naletov_artemii_dpo

./: Makefile  README.md  pyproject.toml
src/primitive_db/: engine.py  main.py
