[project]
name = "project2-naletov-artemii-dpo"
version = "0.1.0"
description = ""
authors = [
    {name = "Artyom Nalyotov",email = "whalewander@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)"
]


[tool.poetry]
packages = [
    { include = "src" },
]


[tool.poetry.scripts]
project = "src.primitive_db.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
