[project]
name = "project2-naletov-artemii-dpo"
version = "0.1.0"
description = ""
authors = [
    {name = "Artyom Nalyotov",email = "whalewander@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)"
]


[tool.poetry]
packages = [
    { include = "src" },
]


[tool.poetry.scripts]
project = "src.primitive_db.main:main"


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]


[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.6,<0.15.0)"
]
